# git-projects-scanner

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
crates/git-projects-core/: Cargo.toml
crates/git-projects-core/locales/de/: main.ftl
crates/git-projects-core/locales/en/: main.ftl
crates/git-projects-core/src/: error.rs  git_analyzer.rs  l10n.rs  lib.rs  models.rs  scanner.rs
docs/: API_SCHEMA.json  DESIGN.md  OPEN_DECISIONS.md
docs/ADR/: README.md
