[workspace]
members = [
    "crates/git-projects-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"  # Updated: gix 0.77 needs modern Rust
authors = ["Niels Cölle <niels@coelle-online.com>"]
license = "MIT OR Apache-2.0"  # Updated: dual license
repository = "https://github.com/ncoelle/git-projects-scanner"
homepage = "https://github.com/ncoelle/git-projects-scanner"
documentation = "https://docs.rs/git-projects-core"
readme = "README.md"
keywords = ["git", "project", "scanner", "cli"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Git operations via gitoxide
gix = { version = "0.77", default-features = false, features = ["max-performance-safe"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Localization
fluent = "0.17"
fluent-bundle = "0.16"
unic-langid = "0.9"

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "cargo"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# File system utilities
dirs = "6.0"
walkdir = "2.5"

# Utilities
chrono = { version = "0.4", features = ["serde"] }

# Logging (optional, for future use)
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

# Profile for optimized dev builds (faster builds than release, still optimized)
[profile.dev-opt]
inherits = "dev"
opt-level = 2