[package]
name = "git-projects-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for scanning and cataloging Git projects"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "git_projects_core"
path = "src/lib.rs"

# CLI binary target
[[bin]]
name = "projects-cli"
path = "src/bin/projects-cli.rs"

[dependencies]
# Git operations via gitoxide
gix = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Localization
fluent = { workspace = true }
fluent-bundle = { workspace = true }
unic-langid = { workspace = true }

# CLI argument parsing
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# File system utilities
dirs = { workspace = true }
walkdir = { workspace = true }

# Utilities
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }